--- a/mkdocs_document_dates/static/languages/de.json
+++ b/mkdocs_document_dates/static/languages/de.json
@@ -14,5 +14,7 @@
     "year_ago": "vor einem Jahr",
     "years_ago": "vor {} Jahren",
     "created_time": "Erstellungszeit",
-    "modified_time": "Änderungszeit"
+    "modified_time": "Änderungszeit",
+    "author": "Autor",
+    "authors": "Autoren"
 }
