--- a/mkdocs_document_dates/static/languages/ko.json
+++ b/mkdocs_document_dates/static/languages/ko.json
@@ -14,5 +14,7 @@
     "year_ago": "1 년 전",
     "years_ago": "{} 년 전",
     "created_time": "작성일",
-    "modified_time": "수정일"
+    "modified_time": "수정일",
+    "author": "작성자",
+    "authors": "작성자"
 }
